doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.11.jar;C:\Program Files (x86)\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files (x86)\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files (x86)\Greenfoot\lib\lang-stride.jar;C:\Program Files (x86)\Greenfoot\lib\guava-17.0.jar;C:\Program Files (x86)\Greenfoot\lib\javassist-3.18.0.jar;C:\Program Files (x86)\Greenfoot\lib\commons-vfs2-2.0.jar;C:\Program Files (x86)\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpmime-4.1.1.jar;D:\Flamingotime
-d
D:\Flamingotime\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Flamingotime\flamin.java
<---- end of javadoc command ---->
Loading source file D:\Flamingotime\flamin.java...
D:\Flamingotime\flamin.java:17: error: <identifier> expected
        myImage. 
                ^
D:\Flamingotime\flamin.java:17: error: not a statement
        myImage. 
               ^
D:\Flamingotime\flamin.java:19: error: illegal start of expression
    private GreenfootImage myImage = getImage();
    ^
D:\Flamingotime\flamin.java:19: error: ';' expected
    private GreenfootImage myImage = getImage();
                          ^
D:\Flamingotime\flamin.java:20: error: illegal start of expression
    private String[]imageNames =
    ^
D:\Flamingotime\flamin.java:27: error: illegal start of expression
private int currentImage =0;
^
D:\Flamingotime\flamin.java:30: error: illegal start of expression
public void addedToWorld(World w)
^
D:\Flamingotime\flamin.java:30: error: illegal start of expression
public void addedToWorld(World w)
       ^
D:\Flamingotime\flamin.java:30: error: ';' expected
public void addedToWorld(World w)
                        ^
D:\Flamingotime\flamin.java:30: error: ';' expected
public void addedToWorld(World w)
                                ^
D:\Flamingotime\flamin.java:38: error: illegal start of expression
    public void act() 
    ^
D:\Flamingotime\flamin.java:38: error: illegal start of expression
    public void act() 
           ^
D:\Flamingotime\flamin.java:38: error: ';' expected
    public void act() 
                   ^
D:\Flamingotime\flamin.java:62: error: illegal start of expression
    private void animateOnMove()
    ^
D:\Flamingotime\flamin.java:62: error: illegal start of expression
    private void animateOnMove()
            ^
D:\Flamingotime\flamin.java:62: error: ';' expected
    private void animateOnMove()
                              ^
D:\Flamingotime\flamin.java:81: error: reached end of file while parsing
   }
    ^
17 errors
